--- a/index.html
+++ b/index.html
@@ -1,83 +1,183 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <!--Responsive page content-->
-    <link rel="stylesheet" href="./assets/css/style.css">  <!-- rel attribute defines relation ship between html and css style sheet -->
-    <title>The Horiseon</title> <!-- page title added-->
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Responsive page content-->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- rel attribute defines relation ship between html and css style sheet -->
+    <title>The Horiseon | Home Page</title>
+    <!-- page title added-->
+  </head>
 
-<body>
+  <body>
     <header class="header">
-        <h1 role="heading" aria-level="1" tab-index="1"> Hori<span class="seo">seo</span>n </h1> <!--adding role, tab-index, aria level as part of accessibility-->
-        <div>
-            <ul>
-                <li>
-                    <a role="link" href="#search-engine-optimization" aria-label="Search engine optimization">Search Engine Optimization</a> <!--ARIA attributes arial-label and accessibility properties added. Also Alt attributes added-->
-                </li>
-                <li>
-                    <a role="link" href="#online-reputation-management" aria-label="Online reputation management">Online Reputation Management</a> <!--ARIA attributes arial-label and accessibility properties added. Also Alt attributes added-->
-                </li>
-                <li>
-                    <a role="link" href="#social-media-marketing" aria-label="Social Media Marketing">Social Media Marketing</a> <!--ARIA attributes arial-label and accessibility properties added. Also Alt attributes added-->
-                </li>          
-            </ul>
-        </div>
+      <h1 role="heading" aria-level="1" tabindex="0">
+        Hori<span class="seo">seo</span>n
+      </h1>
+      <!--adding role, tabindex, aria level as part of accessibility-->
+      <nav>
+        <ul>
+          <li>
+            <a
+              role="link"
+              href="#search-engine-optimization"
+              aria-label="Search engine optimization"
+              >Search Engine Optimization</a
+            >
+            <!--ARIA attributes arial-label and accessibility properties added. Also Alt attributes added-->
+            <!--Changed to Nav from div to meet accessibility standards-->
+          </li>
+          <li>
+            <a
+              role="link"
+              href="#online-reputation-management"
+              aria-label="Online reputation management"
+              >Online Reputation Management</a
+            >
+            <!--ARIA attributes arial-label and accessibility properties added. Also Alt attributes added-->
+            <!--Changed to Nav from div to meet accessibility standards-->
+          </li>
+          <li>
+            <a
+              role="link"
+              href="#social-media-marketing"
+              aria-label="Social Media Marketing"
+              >Social Media Marketing</a
+            >
+            <!--ARIA attributes arial-label and accessibility properties added. Also Alt attributes added-->
+            <!--Changed to Nav from div to meet accessibility standards-->
+          </li>
+        </ul>
+      </nav>
     </header>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img role="img" alt="Thumbnail image for Search Engine Optimation" src="./assets/images/search-engine-optimization.jpg" class="float-left" /> <!--Alt attributes added for image-->
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img role="img" alt="Thumbnail image for Online Reputation Management" src="./assets/images/online-reputation-management.jpg" class="float-right" /> <!--Alt attributes added for image-->
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img role="img" alt="Thumbnail image for Social Media Marketing" src="./assets/images/social-media-marketing.jpg" class="float-left" /> <!--Alt attributes added for image-->
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-    </div>
-    <div class="benefits">
+
+    <main class="hero"></main>
+    <!--Added main for better accessibility-->
+    <div class="container">
+      <main class="content">
+        <main
+          role="contentinfo"
+          tabindex="0"
+          aria-level="1"
+          id="search-engine-optimization"
+          class="search-engine-optimization"
+        >
+          <!--Adding Global attribute id to refer the content to -->
+          <img
+            role="img"
+            tabindex="0"
+            alt="Thumbnail image for Search Engine Optimation"
+            src="./assets/images/search-engine-optimization.jpg"
+            class="float-left"
+          />
+          <!--Alt attributes added for image-->
+          <h1>Search Engine Optimization</h1>
+          <p tabindex="0" role="contentinfo">
+            The dominance of mobile internet use means that users are searching
+            for the right business as they travel, shop, or sit on their couch
+            at home. Search Engine Optimization (SEO) allows you to increase
+            your visibility and find the right customers for your business.
+          </p>
+        </main>
+        <main
+          role="contentinfo"
+          tabindex="0"
+          aria-level="1"
+          id="online-reputation-management"
+          class="online-reputation-management"
+        >
+          <img
+            role="img"
+            tabindex="0"
+            alt="Thumbnail image for Online Reputation Management"
+            src="./assets/images/online-reputation-management.jpg"
+            class="float-right"
+          />
+          <!--Alt attributes added for image-->
+          <h1>Online Reputation Management</h1>
+          <p tabindex="0" role="contentinfo">
+            The web is full of opinions, and some of these can be negative.
+            Social media allows anyone with an internet connection to say
+            whatever they want about your business. Online Reputation Management
+            gives you the control over what potential customers see when they
+            search for your business.
+          </p>
+        </main>
+        <main
+          role="contentinfo"
+          tabindex="0"
+          aria-level="1"
+          id="social-media-marketing"
+          class="social-media-marketing"
+        >
+          <img
+            role="img"
+            tabindex="0"
+            alt="Thumbnail image for Social Media Marketing"
+            src="./assets/images/social-media-marketing.jpg"
+            class="float-left"
+          />
+          <!--Alt attributes added for image-->
+          <h1>Social Media Marketing</h1>
+          <p tabindex="0" role="contentinfo">
+            Social media continues to have a sizable influence on buying habits.
+            Social media marketing helps you determine which platforms are
+            suited to your brand, using analytics to find the right markets and
+            increase your lead generation.
+          </p>
+        </main>
+      </main>
+
+      <div class="benefits">
         <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
+          <h2 tabindex="0">Lead Generation</h2>
+          <img
+            role="img"
+            tanindex="0"
+            alt="Lead Generation"
+            src="./assets/images/lead-generation.png"
+          />
+          <p tabindex="0" role="contentinfo">
+            Inbound strategies for lead generation require less work for your
+            business, bringing customers directly to your website.
+          </p>
         </div>
         <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
+          <h2 tabindex="0" role="contentinfo">Brand Awareness</h2>
+          <img
+            role="img"
+            tabindex="0"
+            alt="brand brand awareness"
+            src="./assets/images/brand-awareness.png"
+          />
+          <p tabindex="0" role="contentinfo">
+            Users find your business through paid and organic searches,
+            increasing the search ranking and visibility for your business.
+          </p>
         </div>
         <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
+          <h2 tabindex="0">Cost Management</h2>
+          <img
+            role="img"
+            tabindex="0"
+            alt="cost management"
+            src="./assets/images/cost-management.png"
+          />
+          <p tabindex="0" role="contentinfo">
+            As the search ranking for your business increases, your advertising
+            costs decrease, and you no longer need to advertise your page.
+          </p>
         </div>
+      </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
+      <h2 role="doc-footnote" tabindex="0" aria-labelledby="footer">
+        Made with ❤️️ by Horiseon
+      </h2>
+      <p tabindex="0" role="contentinfo">
+        &copy; 2019 Horiseon Social Solution Services, Inc.
+      </p>
     </div>
-</body>
-
+  </body>
 </html>
