final accessibility change

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             class="float-left"
           />
           <!--Alt attributes added for image-->
-          <h1>Search Engine Optimization</h1>
+          <h1 tabindex="0" role="rowheader">Search Engine Optimization</h1>
           <p tabindex="0" role="contentinfo">
             The dominance of mobile internet use means that users are searching
             for the right business as they travel, shop, or sit on their couch
@@ -95,7 +95,7 @@
             class="float-right"
           />
           <!--Alt attributes added for image-->
-          <h1>Online Reputation Management</h1>
+          <h1 tabindex="0" role="rowheader">Online Reputation Management</h1>
           <p tabindex="0" role="contentinfo">
             The web is full of opinions, and some of these can be negative.
             Social media allows anyone with an internet connection to say
@@ -119,7 +119,7 @@
             class="float-left"
           />
           <!--Alt attributes added for image-->
-          <h1>Social Media Marketing</h1>
+          <h1 tabindex="0" role="rowheader">Social Media Marketing</h1>
           <p tabindex="0" role="contentinfo">
             Social media continues to have a sizable influence on buying habits.
             Social media marketing helps you determine which platforms are
@@ -131,7 +131,7 @@
 
       <div class="benefits">
         <div class="benefit-lead">
-          <h2 tabindex="0">Lead Generation</h2>
+          <h2 tabindex="0" role="rowheader">Lead Generation</h2>
           <img
             role="img"
             tanindex="0"
@@ -144,7 +144,7 @@
           </p>
         </div>
         <div class="benefit-brand">
-          <h2 tabindex="0" role="contentinfo">Brand Awareness</h2>
+          <h2 tabindex="0" role="rowheader">Brand Awareness</h2>
           <img
             role="img"
             tabindex="0"
@@ -157,7 +157,7 @@
           </p>
         </div>
         <div class="benefit-cost">
-          <h2 tabindex="0">Cost Management</h2>
+          <h2 tabindex="0" role="rowheader">Cost Management</h2>
           <img
             role="img"
             tabindex="0"
